change a couple ops since 1.4 doesn't support valueOf on a couple objects